--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Coronavirus in the Wisconsin: How Fast It’s Growing"
+title: "Coronavirus in the Wisconsin: How Fast It's Growing"
 # author: "Srikanth Aravamuthan & Sean Kent"
 date: "Updated `r format(Sys.time(), '%B %d, %Y, %I:00 %p %Z')`"
 output: 
@@ -445,7 +445,7 @@ Corona Data Scraper. Timeseries. 2020. Retrieved from <https://coronadatascraper
 
 New York Times. New York Times database of U.S. coronavirus cases. 2020. Retrieved from <https://github.com/nytimes/covid-19-data>.
 
-United States Census Bureau, County Population Totals: 2010-2019. 2019. Retrieved from <https://www.census.gov/data/tables/time-series/demo/popest/2010s-counties-total.html>.
+United States Census Bureau. County Population Totals: 2010-2019. 2019. Retrieved from <https://www.census.gov/data/tables/time-series/demo/popest/2010s-counties-total.html>.
 
 United States Census Bureau. Delineation Files. 2018. Retrieved from <https://www.census.gov/geographies/reference-files/time-series/demo/metro-micro/delineation-files.html>.
 
