--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -57,6 +57,17 @@ library(maptools)
   transform:         translateY(30%);
 }
 
+.big-text {
+  font-size: 26px;
+  padding: 0.5em 0em 0em 0em;
+  line-height: 1.9em;
+}
+
+.kinda-big-text {
+  font-size: 24px;
+  padding: 0.2em 0em 0em 0em;
+}
+
 </style>
 
 # COVID-19
