--- a/index.Rmd
+++ b/index.Rmd
@@ -262,7 +262,8 @@ fig1 <- plot_ly(data = plot_data,
   layout(title = "") %>% 
   layout(yaxis = list(title = "Average Daily Change (Last 7 Days)",
                       range = c(0, 1),
-                      tickformat = "%")) 
+                      tickformat = "%")) %>% 
+  config(doubleClickDelay = 500)
 
 fig1
 
@@ -329,7 +330,8 @@ fig2 <- plot_ly(data = plot_data,
   layout(xaxis = list(title = "Confirmed Cases Per Thousand People"),
          yaxis = list(title = "Average Daily Change (Last 7 Days)",
                       range = c(0, 1),
-                      tickformat = "%")) 
+                      tickformat = "%")) %>% 
+  config(doubleClickDelay = 500)
 
 fig2
 
@@ -378,7 +380,7 @@ fig3 <- county %>%
           hoverinfo = "text",
           hoveron = "fills") %>%
   layout(title="",
-         showlegend = FALSE)
+         showlegend = FALSE) 
 
 fig3
 
