--- a/nyt-article-recreation-gundersen.Rmd
+++ b/nyt-article-recreation-gundersen.Rmd
@@ -137,7 +137,8 @@ fig1 <- plot_ly(data = plot_data,
   layout(xaxis = list(title = "Date"),
          yaxis = list(title = "Average Daily Change (Last 7 Days)",
                       range = c(0, 1),
-                      tickformat = "%")) 
+                      tickformat = "%")) %>% 
+  config(doubleClickDelay = 500)
 
 fig1
 
@@ -195,7 +196,8 @@ fig2 <- plot_ly(data = plot_data,
   layout(xaxis = list(title = "Confirmed Cases Per Thousand People"),
          yaxis = list(title = "Average Daily Change (Last 7 Days)",
                       range = c(0, 1),
-                      tickformat = "%")) 
+                      tickformat = "%")) %>% 
+  config(doubleClickDelay = 500)
 
 fig2
 
@@ -246,7 +248,8 @@ fig3 <- plot_ly(data = plot_data,
                colors = "Paired",
                # alpha = 0.5,
                hoverinfo = "text") %>% 
-  layout(yaxis = list(title = "New Cases (Daily Average over Last 7 Days)"))
+  layout(yaxis = list(title = "New Cases (Daily Average over Last 7 Days)")) %>% 
+  config(doubleClickDelay = 500)
 
 fig3
 
@@ -299,7 +302,8 @@ fig4 <- plot_ly(data = plot_data,
                # alpha = 0.5,
                hoverinfo = "text") %>% 
   layout(xaxis = list(title = "Cases Per Thousand People"),
-         yaxis = list(title = "New Cases Per Thousand People (Daily Average over Last 7 Days)"))
+         yaxis = list(title = "New Cases Per Thousand People (Daily Average over Last 7 Days)")) %>% 
+  config(doubleClickDelay = 500)
 
 fig4
 
